--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,3 +8,6 @@ grid-template-columns: 4fr 1fr;
     gap: 45px;
     margin: 100px 50px;
 }
+.cart-container{
+    background: rgba(255, 153, 0, 0.3)
+}
